tests/errors/indexerror.py
"""
site: indexerror
routes: /
exports:
"""

raise IndexError, "Flask-Script v0.3.1 was swallowing IndexError exceptions."
